--- a/app/views/cutaway_page_versions/_cutaway_page_version.html.erb
+++ b/app/views/cutaway_page_versions/_cutaway_page_version.html.erb
@@ -1,47 +1,23 @@
 <div id="<%= dom_id cutaway_page_version %>">
+  <h2>Информация</h2>
   <p>
-    <strong>Name:</strong>
+    <strong>Название(Отображается в nav):</strong>
     <%= cutaway_page_version.name %>
   </p>
 
   <p>
-    <strong>Language:</strong>
-    <%= cutaway_page_version.language_id %>
+    <strong>Язык:</strong>
+    <%= cutaway_page_version.language.code.upcase %>
   </p>
 
   <p>
-    <strong>Header:</strong>
-    <%= cutaway_page_version.header %>
-  </p>
-
-  <p>
-    <strong>Body:</strong>
-    <%= cutaway_page_version.body %>
-  </p>
-
-  <p>
-    <strong>Index:</strong>
-    <%= cutaway_page_version.index %>
-  </p>
-
-  <p>
-    <strong>Visible:</strong>
+    <strong>Отображается на сайте:</strong>
     <%= cutaway_page_version.visible %>
   </p>
 
   <p>
-    <strong>Images:</strong>
-    <%= cutaway_page_version.images %>
-  </p>
-
-  <p>
-    <strong>Cutaway page:</strong>
-    <%= cutaway_page_version.cutaway_page_id %>
-  </p>
-
-  <p>
-    <strong>Route link:</strong>
-    <%= cutaway_page_version.route_link %>
+    <strong>URL страницы:</strong>
+    <%= link_to "/#{cutaway_page_version.language.code}/#{cutaway_page_version.route_link}", "/#{cutaway_page_version.language.code}/#{cutaway_page_version.route_link}", target: "_blank" %>
   </p>
 
 </div>
