--- a/app/views/scripts/index.html.erb
+++ b/app/views/scripts/index.html.erb
@@ -1,14 +1,3 @@
-<p style="color: green"><%= notice %></p>
 
-<h1>Scripts</h1>
+<h1 class="text-center mt-5">В РАЗРАБОТКЕ!</h1>
 
-<div id="scripts">
-  <% @scripts.each do |script| %>
-    <%= render script %>
-    <p>
-      <%= link_to "Show this script", script %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New script", new_script_path %>
