--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,34 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+
+#editor{
+    height: 800px;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+#editor-small{
+  height: 300px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.form-box{
+  width: 80%;
+  height: auto;
+  margin: auto;
+}
+
+.form-subbox{
+  width: 45%;
+  height: 100%;
+  margin: 2.5%;
+  float: left;
+  padding: auto;
+}
+
+.poloska{
+  border: 2px solid;
+  width: 100%;
+}
+
