--- a/app/views/cutaway_pages/show.html.erb
+++ b/app/views/cutaway_pages/show.html.erb
@@ -1,10 +1,15 @@
 <p style="color: green"><%= notice %></p>
+<h1 class="text-center"><%= @cutaway_page.name %></h1>
+<div class="container">
+  <div class="text-center">
+    <%= link_to "Редактировать страницу", edit_cutaway_page_path(@cutaway_page) %> |
+    <%= link_to "Все страницы", cutaway_pages_path %> |
+    <%= link_to "Добавить языковую версию", new_cutaway_page_version_path(cutaway_page_id: @cutaway_page.id) %>
+  </div>
 
-<%= render @cutaway_page %>
+  <div id="content">
+    <%= render @cutaway_page %>
+  </div>
 
-<div>
-  <%= link_to "Edit this cutaway page", edit_cutaway_page_path(@cutaway_page) %> |
-  <%= link_to "Back to cutaway pages", cutaway_pages_path %>
-
-  <%= button_to "Destroy this cutaway page", @cutaway_page, method: :delete %>
+  <%= button_to "Удалить эту страницу", @cutaway_page, method: :delete, class: "btn btn-danger" %>
 </div>
