--- a/app/views/styles/_style.html.erb
+++ b/app/views/styles/_style.html.erb
@@ -10,18 +10,13 @@
   </p>
 
   <p>
+    <strong>Название:</strong>
+    <%= style.name %>
+  </p>
+
+  <p>
     <strong>Link tag:</strong>
     <%= style.link_tag %>
-  </p>
-
-  <p>
-    <strong>As file:</strong>
-    <%= style.as_file %>
-  </p>
-
-  <p>
-    <strong>For all pages:</strong>
-    <%= style.for_all_pages %>
   </p>
 
 </div>
