--- a/app/views/styles/new.html.erb
+++ b/app/views/styles/new.html.erb
@@ -1,9 +1,8 @@
-<h1>New style</h1>
+<div class="text-center mb-3">
+  <h1>Добавление CSS</h1>
+  <%= link_to "Список CSS", styles_path %>
+</div>
 
-<%= render "form", style: @style %>
-
-<br>
-
-<div>
-  <%= link_to "Back to styles", styles_path %>
+<div class="container">
+  <%= render "form", style: @style %>
 </div>
