--- a/app/views/cutaway_page_versions/_edit.html.erb
+++ b/app/views/cutaway_page_versions/_edit.html.erb
@@ -2,6 +2,10 @@
     <%= cutaway_page_version.body %>
 </div>
 
+<div>
+  <%= render "layouts/files_routes" %>
+</div>
+
 <script>
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
