--- a/app/views/cutaway_page_versions/_form.html.erb
+++ b/app/views/cutaway_page_versions/_form.html.erb
@@ -10,6 +10,10 @@
   </xmp>
 </div>
 
+<div>
+  <%= render "layouts/files_routes" %>
+</div>
+
 <script>
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
