--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -32,3 +32,17 @@
   width: 100%;
 }
 
+.media-lib{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-flow: column wrap;
+  flex-direction: row;
+}
+
+.lib-item{
+  width: 300px;
+  height: 300px;
+  border: 2px solid black;
+  margin: 10px;
+}
