--- a/app/views/footers/_form.html.erb
+++ b/app/views/footers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: footer) do |form| %>
+<%= form_with(model: footer, html: { :onsubmit => "save_code()" }) do |form| %>
   <% if footer.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(footer.errors.count, "error") %> prohibited this footer from being saved:</h2>
@@ -11,27 +11,52 @@
     </div>
   <% end %>
 
+  <div id="editor" class="mb-5">
+  <%= footer.code %>
+  </div>
   <div>
-    <%= form.label :code, style: "display: block" %>
-    <%= form.text_area :code %>
+  <%= render "layouts/files_routes" %>
   </div>
 
-  <div>
-    <%= form.label :active, style: "display: block" %>
-    <%= form.check_box :active %>
-  </div>
+  <script>
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/monokai");
+    editor.session.setMode("ace/mode/html");
+  </script>
+
+  <div class="container">
+  <h2>Дополнительная конфигурация</h2>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
+    <%= form.label "Название", style: "display: block" %>
     <%= form.text_field :name %>
   </div>
 
   <div>
-    <%= form.label :language_id, style: "display: block" %>
-    <%= form.number_field :language_id %>
+    <%= form.label "Использовать на сайте", style: "display: block" %>
+    <%= form.check_box :active %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.label "Язык", style: "display: block" %>
+    <%= form.collection_select :language_id, Language.all, :id, :code %>
+  </div>
+  <br>
+  <%= form.hidden_field :code %>
+  <div class="mb-5">
+    <%= form.submit "Сохранить", class: "btn btn-success" %>
   </div>
 <% end %>
+</div>
+
+<script>
+  var save_code = function() {
+    let body_field = document.getElementById('footer_code');
+    
+    var editor = ace.edit("editor");
+
+    body_field.value = editor.getSession().getValue();
+  }
+</script>
+
+
