--- a/app/views/languages/new.html.erb
+++ b/app/views/languages/new.html.erb
@@ -1,9 +1,5 @@
-<h1>New language</h1>
-
-<%= render "form", language: @language %>
-
-<br>
-
-<div>
-  <%= link_to "Back to languages", languages_path %>
+<h1 class="text-center">Добавление языка</h1>
+<%= link_to "Список языков", languages_path, class: "text-center" %>
+<div class="container">
+  <%= render "form", language: @language %>
 </div>
