--- a/app/views/languages/show.html.erb
+++ b/app/views/languages/show.html.erb
@@ -1,5 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
+<div class="container">
 <%= render @language %>
 
 <div>
@@ -7,4 +8,5 @@
   <%= link_to "Back to languages", languages_path %>
 
   <%= button_to "Destroy this language", @language, method: :delete %>
+</div>
 </div>
