--- a/app/views/layouts/_development_nav.html.erb
+++ b/app/views/layouts/_development_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">RailsCMS<sup>alpha 1</sup></a>
+      <a class="navbar-brand" href="#">RailsCMS<sup>alpha</sup></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,6 +26,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link <%= "active" if current_path.include?("development/scripts") %>" href="/development/scripts">Скрипты</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link <%= "active" if current_path.include?("development/libraries") %>" href="/development/libraries">Библиотеки файлов</a>
           </li>
         </ul>
       </div>
