--- a/app/views/layouts/_development_nav.html.erb
+++ b/app/views/layouts/_development_nav.html.erb
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link <%= "active" if current_path.include?("development/libraries") %>" href="/development/libraries">Библиотеки файлов</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link <%= "active" if current_path.include?("development/faq") %>" href="/development/faq">Руководство</a>
+          </li>
         </ul>
       </div>
     </div>
